--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="base">
 
     </div>
-    <script src="./output/indexscript.js">
+    <script type="module" src="./output/indexscript.js">
 
     </script>
 </body>
