--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <div id="base">
 
     </div>
-    <script type="module" src="./output/indexscript.js">
+    <script data-main="./output/indexscript.js" type="text/javascript" 
+    src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.js"></script>
+    <!-- <script type="module" src="./output/indexscript.js">
 
-    </script>
+    </script> -->
 </body>
 </html>
