--- a/testings/element-expanding.html
+++ b/testings/element-expanding.html
@@ -9,7 +9,7 @@
     <div id="base">
 
     </div>
-    <script data-main="./output/indexscript.js" type="text/javascript" 
+    <script data-main="../output/testings/element-expanding.js" type="text/javascript" 
     src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.js"></script>
     <!-- <script type="module" src="./output/indexscript.js">
 
