--- a/testings/input-expanding.html
+++ b/testings/input-expanding.html
@@ -7,14 +7,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
+<style>
+    #jsonOutput {
+        white-space: break-spaces ;
+    }
+</style>
+    </head>
 
 <body>
-    <div style="display: flex;">
-        <div id="base">
+    <div class="row p-2">
+        <div id="base" class="col-6 mx-0">
 
         </div>
-        <div id="jsonOutput">
+        <div id="jsonOutput" class="col-6 mx-0">
 
         </div>
     </div>
