--- a/testings/input-expanding.html
+++ b/testings/input-expanding.html
@@ -7,12 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<style>
-    #jsonOutput {
-        white-space: break-spaces ;
-    }
-</style>
-    </head>
+
+    <style>
+        * {
+            font-family: "Poppins";
+        }
+
+        #jsonOutput {
+            white-space: break-spaces;
+        }
+    </style>
+</head>
 
 <body>
     <div class="row p-2">
@@ -29,7 +34,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-        
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.js">
     </script>
 
