Converting raw to final value in sections

--- a/testings/input-expanding.html
+++ b/testings/input-expanding.html
@@ -24,8 +24,11 @@
         <div id="base" class="col-6 mx-0">
 
         </div>
-        <div id="jsonOutput" class="col-6 mx-0">
+        <div class="outputArea col-6 mx-0">
+            <input type="checkbox" onchange="setFinalMode(event.target.checked)"> Final modu
+            <div id="jsonOutput" >
 
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
