--- a/testings/input-expanding.html
+++ b/testings/input-expanding.html
@@ -29,6 +29,10 @@
             <div id="jsonOutput" >
 
             </div>
+            <div>
+            <textarea id="jsonInput" cols="30" rows="10"></textarea>
+            <button onclick="jsonInputApply()">Apply Data</button>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
