--- a/testings/input-expanding.html
+++ b/testings/input-expanding.html
@@ -21,9 +21,13 @@
 
 <body>
     <div class="row p-2">
-        <div id="base" class="col-6 mx-0">
+        <div class="col-6 mx-0">
+            <div id="base" >
 
+            </div>
+            <button onclick="submitForm()">Submit</button>
         </div>
+
         <div class="outputArea col-6 mx-0">
             <input type="checkbox" onchange="setFinalMode(event.target.checked)"> Final modu
             <div id="jsonOutput" >
