--- a/testings/element-expanding.html
+++ b/testings/element-expanding.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +11,98 @@
         }
     </style>
 </head>
+
 <body>
     <div id="base">
 
     </div>
   
-    <script data-main="../output/testings/element-expanding.js" type="text/javascript" 
-    src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.js"></script>
-    <!-- <script type="module" src="./output/indexscript.js">
+    <script src="../public/reform.js">
+    </script>
+    <script src="../output/testings/element-expanding.js"></script>
 
-    </script> -->
+    <script>
+        const { ElementField, RootSectionField, ElementFieldEventBinding, ElementReflection, Reflector } = Reform;
+        function southParkCharacters() {
+            let array = [],
+                source = [
+                    {
+                        name: "cartman",
+                        imgUrl: "https://upload.wikimedia.org/wikipedia/en/thumb/7/77/EricCartman.png/220px-EricCartman.png"
+                    },
+                    {
+                        name: "kyle",
+                        imgUrl: "https://vignette.wikia.nocookie.net/southpark/images/9/95/Kyle-broflovski.png"
+                    },
+                    {
+                        name: "stan",
+                        imgUrl: "https://vignette.wikia.nocookie.net/southpark/images/c/c6/Stan-marsh-0.png"
+                    },
+                    {
+                        name: "kenny",
+                        imgUrl: "https://upload.wikimedia.org/wikipedia/en/6/6f/KennyMcCormick.png"
+                    },
+                ]
+            let chr;
+            for (let index = 0; index < source.length; index++) {
+                chr = source[index];
+                let eventThings = {};
+                if (chr.name === "kenny") {
+                    eventThings = {
+                        "click":
+                            [
+                                (reflection, event) => {
+                                    reflection.element.style.display = "none";
+                                    const description = reflector.findReflectionById("description");
+                                    if (description?.element)
+                                        description.element.textContent = "Oh my god, they killed Kenny! YOU B🤬ARD!!!"
+                                }
+                            ]
+                    }
+                }
+                array.push(new ElementField({
+                    content: [],
+                    tag: "img",
+                    attributes: [
+                        {
+                            key: "src",
+                            value: chr.imgUrl
+                        },
+                        {
+                            key: "alt",
+                            value: chr.name
+                        },
+                        {
+                            key: "height",
+                            value: "100px"
+                        }
+                    ],
+                    eventBindings: eventThings
+                }));
+
+            }
+
+            return array;
+        }
+
+
+        const reflector = new Reflector(new RootSectionField({
+            content: [
+                new ElementField({
+                    tag: "h1",
+                    content: "reform-js element rendering, includes event binding..."
+                }),
+                new ElementField({
+                    tag: "p",
+                    id: "description",
+                    content: "Maybe, you can consider click the known person."
+                }),
+                ...southParkCharacters()
+            ]
+        }));
+
+        reflector.expandThere("div#base")
+    </script>
 </body>
+
 </html>
