yeeeeey its working now

--- a/testings/sifirdan-form.html
+++ b/testings/sifirdan-form.html
@@ -12,8 +12,8 @@
 
     </div>
 
-    <script src="../public/reform.js"></script>
-    <script>
+    <script src="../public/bundle/reform.js"></script> 
+    <script >
         const { Reflector, InputField, SectionField, EventObserve } = Reform
         const reflector = new Reflector(
             {
