Field naming issues fixed

--- a/testings/element-expanding.html
+++ b/testings/element-expanding.html
@@ -17,10 +17,7 @@
 
     </div>
   
-    <script src="../public/reform.js">
-    </script>
-    <script src="../output/testings/element-expanding.js"></script>
-
+    <script src="../public/bundle/reform.min.js"></script>
     <script>
         const { ElementField, RootSectionField, ElementFieldEventBinding, ElementReflection, Reflector } = Reform;
         function southParkCharacters() {
