testings folder renamed as Examples

--- a/Examples/input-expanding-turkce.html
+++ b/Examples/input-expanding-turkce.html
@@ -25,17 +25,17 @@
             <div id="base">
 
             </div>
-            <button onclick="submitForm()">Submit</button>
+            <button onclick="submitForm()">Gönder</button>
         </div>
 
         <div class="outputArea col-6 mx-0">
-            <input type="checkbox" onchange="setFinalMode(event.target.checked)"> Final modu
+            <input type="checkbox" onchange="setFinalMode(event.target.checked)"> Nihai modu
             <div id="jsonOutput">
 
             </div>
             <div>
                 <textarea id="jsonInput" cols="30" rows="10"></textarea>
-                <button onclick="jsonInputApply()">Apply Data</button>
+                <button onclick="jsonInputApply()">Uygula</button>
             </div>
         </div>
     </div>
